we can now update formulas in cond formats correctly, fdo#48970

Change-Id: Ifc5931eeb7325f606822ceaf23ed6af73467c782